@@ -30,26 +30,22 @@ ramp: 1D float ndarray                                              \n\
 
 
 static PyObject *gauss2D(PyObject *self, PyObject *args){
-    PyArrayObject
-        *array, *t, *params;
-    double background, r0, r1, pm;
+    PyArrayObject *array;
+    double background, height, r0, r1;
     double
-        height=0.0,
+        //height=0.0,
         //background=0.0,
         x0, y0, x_sigma, y_sigma;
     int i, j, ny, nx;
     npy_intp dims[2];
 
-    if (!PyArg_ParseTuple(args, "OO", &params, &t))
+    if (!PyArg_ParseTuple(args, "iidd", &ny, &nx, &y0, &x0))
         return NULL;
 
-    background = INDd(params,0);
-    r1 = INDd(params,1);
-    r0 = INDd(params,2);
-    pm = INDd(params,3);
+    background = 0.0;
 
-    dims[0] = (int)PyArray_DIM(t,0);
-    dims[1] = (int)PyArray_DIM(t,0);
+    dims[0] = ny;
+    dims[1] = nx;
     array = (PyArrayObject *) PyArray_SimpleNew(2, dims, NPY_DOUBLE);
 
     //for(j=0; j<ny; j++)
@@ -61,7 +57,7 @@ static PyObject *gauss2D(PyObject *self, PyObject *args){
     for(i=0; i<dims[0]; i++)
         IND2d(array,i,i) =
             background
-            + pm*exp(-r1*INDd(t,i) + r0);
+            + exp(-r1*background + y0);
 
     return Py_BuildValue("N", array);
 
