@@ -663,3 +663,8 @@ or something inside the gauss2D function.
 It seems that the problem is the content of the function.
 Reverting edits.
 
+*****
+
+Not breaking once again.
+Try changing stuff in the PyArg_ParseTuple().
+
